[tool.poetry]
name = "yohonhl"
version = "0.1.0"
description = "Step 1: scrape NHL stats, Step 2: analyze data, Step 3: PROFIT"
authors = ["Ben Shelley <shellbend@gmail.com>", "Robert Yoho <rsy923@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "yohonhl", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"
click = "^8.1.7"

[tool.poetry.group.test.dependencies]
pytest = ">=6.2.5"
coverage = {extras = ["toml"], version = "^6.1"}

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
darglint = ">=1.8.1"
mypy = "*"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
ruff = "*"
typeguard = ">=2.13.3"

[tool.poetry.scripts]
yohonhl = "yohonhl.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["yohonhl", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
src = ["src", "tests"]
line-length = 88
select = [
    "A",
    "ARG",
    "B",
    'B9',
    'BLE',
    'C',
    'C4',
    'D',
    'DTZ',
    'E',
    'F',
    'I',
    'N',
    'PIE',
    'PT',
    'PTH',
    'Q',
    'RET',
    'RUF',
    'S',
    'SIM',
    'SLF',
    'T10',
    'TCH',
    'UP',
    'W',
]
target-version = 'py37'

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = [
    'S',
    'D212',
    'D415',
    'D205',
    'D104',
]
"noxfile.py" = ["S101"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = 'numpy'

[tool.ruff.isort]
force-single-line = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
