[project]
name = "yohonhl"
version = "0.1.1"
description = "Step 1: scrape NHL stats, Step 2: analyze data, Step 3: PROFIT"
authors = [
    {name = "Ben Shelley", email = "shellbend@gmail.com"},
    {name = "Robert Yoho", email = "rsy923@gmail.com"},
]
license-files =  { paths = ["LICENSE"] }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests ~= 2.31.0",
    "click ~= 8.1.7",
    "pandas ~= 2.2.0",
    "aiohttp ~= 3.9.1",
]

[tool.uv]
dev-dependencies = [
    "Pygments >= 2.10.0",
    "darglint >= 1.8.1",
    "mypy",
    "pre-commit >= 2.16.0",
    "pre-commit-hooks >= 4.1.0",
    "typeguard >= 2.13.3",
    "jupyter ~= 1.0.0",
    "types-requests ~= 2.31.0.20240106",
    "pandas-stubs ~= 2.1.4.231227",
    "pytest >=6.2.5",
    "ruff",
    "coverage[toml] ~= 6.1",
    "requests-mock ~= 1.11.0",
    "aioresponses ~= 0.7.6",
    "pytest-asyncio ~= 0.23.5",
]

[project.scripts]
yohonhl = "yohonhl.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["yohonhl", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
src = ["src", "tests"]
line-length = 88
target-version = 'py39'

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    'B9',
    'BLE',
    'C',
    'C4',
    'D',
    'DTZ',
    'E',
    'F',
    'I',
    'N',
    'PIE',
    'PT',
    'PTH',
    'Q',
    'RET',
    'RUF',
    'S',
    'SIM',
    'SLF',
    'T10',
    'TCH',
    'UP',
    'W',
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = [
    'S',
    'D212',
    'D415',
    'D205',
    'D104',
]
"tests/conftest.py" = ["E501"]
"noxfile.py" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = 'numpy'

[tool.ruff.lint.isort]
force-single-line = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
